--- a/CurrencyExchangeRates.Api/appsettings.Development.json
+++ b/CurrencyExchangeRates.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=CurrencyExchangeRates;Trusted_Connection=True;Encrypt=False;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
