change the architecture so the EcbGateway has only the implementation of the interface that exists inside the Application Layer EcbGateway works like a middle layer between Application and Infrastructure Layers It can access Domain through Application Layer only and Application cannot access EcbGateway or Infrastructure
Fix the unit testing for CurrencyRatesUpdate

--- a/CurrencyExchangeRates.Application/CurrencyExchangeRates.Application.csproj
+++ b/CurrencyExchangeRates.Application/CurrencyExchangeRates.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CurrencyExchangeRates.Domain\CurrencyExchangeRates.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
