implement Wallet Entity, add it in DbContext. Create all the logic behind wallet for different strategies Implement auto selection for fund strategies according to user input DI

--- a/CurrencyExchangeRates.Infrastructure/CurrencyExchangeRates.Infrastructure.csproj
+++ b/CurrencyExchangeRates.Infrastructure/CurrencyExchangeRates.Infrastructure.csproj
@@ -29,4 +29,8 @@
     <ProjectReference Include="..\CurrencyExchangeRates.EcbGateway\CurrencyExchangeRates.EcbGateway.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Wallet\" />
+  </ItemGroup>
+
 </Project>
