--- a/CurrencyExchangeRates.Application/CurrencyExchangeRates.Application.csproj
+++ b/CurrencyExchangeRates.Application/CurrencyExchangeRates.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CurrencyExchangeRates.Domain\CurrencyExchangeRates.Domain.csproj" />
   </ItemGroup>
 
