add Options for gateway URLs

--- a/CurrencyExchangeRates.Api/appsettings.Development.json
+++ b/CurrencyExchangeRates.Api/appsettings.Development.json
@@ -7,5 +7,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "EcbGateway": {
+    "Url": "https://www.ecb.europa.eu/stats/eurofxref/eurofxref-daily.xml"
   }
 }
