create a IWalletService, in order to create unit tests for the API endpoints Create unit tests for the 3 endpoints

--- a/CurrencyExchangeRates.Tests/CurrencyExchangeRates.Tests.csproj
+++ b/CurrencyExchangeRates.Tests/CurrencyExchangeRates.Tests.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CurrencyExchangeRates.Api\CurrencyExchangeRates.Api.csproj" />
     <ProjectReference Include="..\CurrencyExchangeRates.Infrastructure\CurrencyExchangeRates.Infrastructure.csproj" />
   </ItemGroup>
 
