Introduce new Currency Gateway, currently not working because we dont own an API token DI the new services, add the settings for the new gateway remove unused folder

--- a/CurrencyExchangeRates.Api/appsettings.Development.json
+++ b/CurrencyExchangeRates.Api/appsettings.Development.json
@@ -10,5 +10,9 @@
   },
   "EcbGateway": {
     "Url": "https://www.ecb.europa.eu/stats/eurofxref/eurofxref-daily.xml"
+  },
+  "OpenExchange": {
+    "BaseUrl": "https://openexchangerates.org/api/latest.json",
+    "AppId": "1"
   }
 }
